refactor(atoma-daemon): endpoints
